--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,6 +71,10 @@ body {
     margin-top: 25px;
 }
 
+.btn-secondary {
+    margin-top: 10px;
+}
+
 #create-btn {
     border-style: solid;
     border-width: 1px;
